# scope

./: .gitignore  Makefile  README.md  SKILL.md  _meta.json  pyproject.toml
.github/workflows/: ci.yml
docs/: SKILL.md  architecture.md
docs/scope/: SKILL.md  _meta.json
src/opener/: __init__.py  __main__.py  types.py
src/opener/engine/: anomaly.py  classifier.py  extractor.py  parser.py  ranker.py
src/opener/render/: card.py
src/opener/scope/: __init__.py  __main__.py  models.py
src/opener/scope/engine/: cache.py  frameworks.py  git.py  rank.py  references.py  symbols.py
src/opener/scope/modes/: map.py
src/scope/: __init__.py  __main__.py  types.py
src/scope/_scope/: __init__.py
src/scope/_scope/engine/: cache.py  discover.py  frameworks.py  rank.py  references.py  symbols.py
src/scope/_scope/modes/: map.py  overview.py  pairs.py
src/scope/engine/: anomaly.py  classifier.py  extractor.py  parser.py  ranker.py
src/scope/render/: card.py
tests/: test_anomaly.py  test_classifier.py  test_extractor.py
